--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -96,7 +96,7 @@
             <div class="form-group">
               <div class="col-md-6">
                 <%= f.label :current_password, 'Old Password' %>
-                <%= f.password_field :current_password %>
+                <%= f.password_field :current_password, 'data-parsley-minlength'=> '6' %>
               </div>
               <div class="col-md-6">
                 <label>&nbsp;</label>
@@ -106,11 +106,11 @@
             <div class="form-group">
               <div class="col-md-6">
                 <%= f.label :password, 'New Password' %>
-                <%= f.password_field :password %>
+                <%= f.password_field :password, 'data-parsley-minlength'=> '6' %>
               </div>
               <div class="col-md-6">
                 <%= f.label :password_confirmation, 'Retype Password' %>
-                <%= f.password_field :password_confirmation %>
+                <%= f.password_field :password_confirmation, 'data-parsley-minlength'=> '6' %>
               </div>
             </div>
         <% end %>
