--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -130,9 +130,9 @@
       <% if @user.influencer? %>
           <h4 class="social-account">SOCIAL ACCOUNTS AND PRICING</h4>
 
-          <button type="button" class="btn btn-account button-border-yellow" data-trigger="modal" data-target="AddFacebookAccount" href="javascript:" data-dismiss="modal">MANAGE ACCOUNT</button>
+          <button type="button" class="btn btn-account button-border-yellow js-add-account" data-trigger="modal" data-target="AddFacebookAccount" href="javascript:" data-dismiss="modal">MANAGE ACCOUNT</button>
 
-          <%= render partial: 'shared/add_account_modal' %>
+          <%= render 'shared/add_account_modal', remote: true %>
 
           <div class="social-account-tabs">
             <%= render partial: 'social_account_tabs', locals: { f: f } %>
