--- a/app/views/shared/_add_account_modal.html.erb
+++ b/app/views/shared/_add_account_modal.html.erb
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<%= render 'profile/add_facebook_account' %>
+<%= render 'profile/add_facebook_account', remote: remote %>
 
 <script>
     (function() {
