admin success message correction

--- a/app/views/admin/admins/activate_user.js.erb
+++ b/app/views/admin/admins/activate_user.js.erb
@@ -1,7 +1,5 @@
 <% if @success %>
-    $('tr#user-<%= @user.id %>').remove();
-    $('.modal-container').html("<%= j render(:partial => 'shared/success_message',
-           :locals => { message: brand_active_success_message }) %>");
+    window.location.reload();
 <% else %>
     alert("<%= @message %>");
 <% end %>
