--- a/app/views/shared/_add_account_modal.html.erb
+++ b/app/views/shared/_add_account_modal.html.erb
@@ -31,12 +31,14 @@
             });
 
             var createForm = function(authResp) {
-                FB.api('/me/accounts?fields=id,name,picture', function(resp) {
+                FB.api('/me/accounts?fields=id,name,likes,picture', function(resp) {
                     var selected = $('.social-account-tabs .tab-pane').map(function() {
                       return $(this).attr('id');
                     }).toArray();
 
-                    var data = resp.data.map(function(page) {
+                    var data = resp.data.filter(function(page) {
+                        return page.likes >= <%= CONFIG[:min_fb_likes_for_registration] %>;
+                    }).map(function(page) {
                         page.selected = $.inArray('fb_' + page.id, selected) > -1;
                         return page;
                     });
