Parsley error alignment change in profile page

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -439,3 +439,7 @@ div.awesomplete > ul > li[aria-selected="true"] {
 .chosen-container-multi .chosen-results {
     text-align: left;
 }
+
+.parsley-errors-list {
+    margin: -8px 0 10px;
+}
