link influencer invitation to sing-up modal and close password send for influencer

--- a/app/views/admin/admins/_add_admin_modal.html.erb
+++ b/app/views/admin/admins/_add_admin_modal.html.erb
@@ -33,13 +33,12 @@
           </div>
           <div class="input_container">
             <div class="label_l">Password</div>
-            <input data-parsley-id="6194" class="login_input" data-parsley-required="true"
+            <input data-parsley-id="6194" class="login_input" data-parsley-minlength="[6]" data-parsley-required="true"
                    data-parsley-trigger="change" name="user[password]" id="user_password" type="password">
-            <ul id="parsley-id-6194" class="parsley-errors-list"></ul>
           </div>
           <div class="input_container">
             <div class="label_l">Confirm password</div>
-            <input class="login_input" id="user_password_confirmation" type="password"
+            <input class="login_input" data-parsley-minlength="[6]" id="user_password_confirmation" type="password"
                    name="user[password_confirmation]" autocomplete="off" data-parsley-required="true"
                    data-parsley-trigger="change">
           </div>
