--- a/app/views/shared/_sign_up_modal.html.erb
+++ b/app/views/shared/_sign_up_modal.html.erb
@@ -50,7 +50,7 @@
 
               <div class="input_container">
                 <div class="label_l">Phone</div>
-                <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[phone]" id="user_phone" type="text">
+                <input data-parsley-id="6021" data-parsley-pattern="^[\d\+\-\.\(\)\/\s]*$" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[phone]" id="user_phone" type="text">
                 <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
               </div>
               <div class="input_container">
