--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'chosen', media: 'all' %>
+<%= stylesheet_link_tag 'bootstrap-chosen.css', media: 'all' %>
 <%= stylesheet_link_tag 'profile.css', media: 'all' %>
 <%= javascript_include_tag 'chosen.jquery' %>
 
