add bootbox alert to all alert

--- a/app/views/payments/brand_index.html.erb
+++ b/app/views/payments/brand_index.html.erb
@@ -87,7 +87,8 @@
             }
             else
             {
-                swal("Please Mark at least one Transaction")
+                bootbox.alert({message: 'Please Mark at least one Transaction.',
+                    closeButton: false});
             }
 
         });
