--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -156,7 +156,8 @@
             }
             else
             {
-                swal("Please Mark at least one Campaign")
+                bootbox.alert({message: 'Please Mark at least one Campaign.',
+                    closeButton: false});
             }
 
         });
