--- a/app/views/brand_payments/brand_payment.html.erb
+++ b/app/views/brand_payments/brand_payment.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'payments', media: 'all' %>
 
-<% title "Brand Payment" %>
+<% title 'Brand Payment' %>
 
 <div class="payment-div ">
   <div class="payment-button-set">
