--- a/app/views/payments/influencer_index.html.erb
+++ b/app/views/payments/influencer_index.html.erb
@@ -127,7 +127,7 @@
             }
             else
             {
-                bootbox.alert({message: 'Please Mark at least one Transaction.',
+                bootbox.alert({message: 'Please select at least one transaction.',
                     closeButton: false});
             }
 
