--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -443,3 +443,13 @@ div.awesomplete > ul > li[aria-selected="true"] {
 .parsley-errors-list {
     margin: -8px 0 10px;
 }
+
+.chosen-container-multi .chosen-choices {
+    margin-bottom: 10px;
+    border-radius: 0;
+    border: 1px solid #d9d9d9;
+}
+
+.chosen-container .chosen-drop {
+    margin-top: -10px;
+}
