--- a/app/views/offers/_offer_body_view.erb
+++ b/app/views/offers/_offer_body_view.erb
@@ -12,7 +12,7 @@
   <div class="message-container-<%= offer.id %>">
     <% offer.messages.each do |message| %>
         <div id="message-<%= message.id %>" class="message message-<%= message.id %>">
-          <%= image_tag offer.receiver.profile_picture, class: 'inbox-logo-responsive' %>
+          <%= image_tag message.sender.profile_picture, class: 'inbox-logo-responsive' %>
           <div class="message-body"><%= simple_format(message.body) %> </div>
         </div>
     <% end %>
