solve client fiend issues for admin section

--- a/app/views/admin/invitations/_invited_brand.html.erb
+++ b/app/views/admin/invitations/_invited_brand.html.erb
@@ -2,6 +2,8 @@
   <td><%= brand.first_name %></td>
   <td><%= brand.last_name %></td>
   <td><%= brand.email %></td>
+  <td><%= brand.phone %></td>
+  <td><%= brand.company_name %></td>
   <td><%= brand.time %></td>
-  <td><%= link_to 'Re-invited', brand_resend_admin_invitation_path(brand), remote: true %></td>
+  <td><%= link_to 'Re-invite', brand_resend_admin_invitation_path(brand), remote: true %></td>
 </tr>
