--- a/app/views/admin/invitations/brand_invitation.html.erb
+++ b/app/views/admin/invitations/brand_invitation.html.erb
@@ -18,8 +18,10 @@
       <th>First Name</th>
       <th>Last Name</th>
       <th>Email</th>
+      <th>Phone</th>
+      <th>Company</th>
       <th>Date</th>
-      <th>Action</th>
+      <th>Re-invite</th>
     </tr>
     </thead>
     <tbody>
