--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1360,3 +1360,13 @@ h5, .h5 {
 .text-align-right {
   text-align: right;
 }
+
+.password-reset-container{
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.password-reset-container .label_l{
+  min-width: 130px;
+}
