change invitation message and rename action link name

--- a/app/views/admin/invitations/_invitation.html.erb
+++ b/app/views/admin/invitations/_invitation.html.erb
@@ -3,5 +3,5 @@
   <td><%= invitation.last_name %></td>
   <td><%= invitation.email %></td>
   <td><%= invitation.time %></td>
-  <td><%= link_to 'Re-invited', influencer_resend_admin_invitation_path(invitation), remote: true %></td>
+  <td><%= link_to 'Re-invite', influencer_resend_admin_invitation_path(invitation), remote: true %></td>
 </tr>
