--- a/app/views/admin/invitations/brand_invitation.html.erb
+++ b/app/views/admin/invitations/brand_invitation.html.erb
@@ -21,7 +21,7 @@
       <th>Phone</th>
       <th>Company</th>
       <th>Date</th>
-      <th>Re-invite</th>
+      <th>Action</th>
     </tr>
     </thead>
     <tbody>
