add missing field to brand invitation admin section

--- a/app/views/admin/admins/_user.html.erb
+++ b/app/views/admin/admins/_user.html.erb
@@ -2,6 +2,8 @@
   <td><%= user.first_name %></td>
   <td><%= user.last_name %></td>
   <td><%= user.email %></td>
+  <td><%= user.phone %></td>
+  <td><%= user.company_name %></td>
   <td><%= user.time %></td>
   <% if user.brand? %>
   <td>
