--- a/app/views/admin/admins/brand_list.html.erb
+++ b/app/views/admin/admins/brand_list.html.erb
@@ -14,6 +14,8 @@
       <th>First Name</th>
       <th>Last Name</th>
       <th>Email</th>
+      <th>Phone</th>
+      <th>Company Name</th>
       <th>Date</th>
       <th>Reset Password</th>
       <th>Action</th>
