--- a/app/views/admin/admins/influencer_list.html.erb
+++ b/app/views/admin/admins/influencer_list.html.erb
@@ -12,6 +12,8 @@
       <th>First Name</th>
       <th>Last Name</th>
       <th>Email</th>
+      <th>Phone</th>
+      <th>Company Name</th>
       <th>Date</th>
       <th>Action</th>
     </tr>
