--- a/app/views/admin/admins/_user.html.erb
+++ b/app/views/admin/admins/_user.html.erb
@@ -5,7 +5,7 @@
   <td><%= user.phone %></td>
   <td><%= user.company_name %></td>
   <td><%= user.time %></td>
-  <% if user.brand? %>
+  <% if user.brand? && !user.waiting? %>
   <td>
     <a href="<%= reset_user_password_admin_admin_path(user) %>" data-remote="true" class="text-success user-password-change" data-id="<%= user.email %>">
     <h5>Reset Password</h5>
