--- a/app/views/profile/_read_only_profile_modal.html.erb
+++ b/app/views/profile/_read_only_profile_modal.html.erb
@@ -2,196 +2,132 @@
 <%= stylesheet_link_tag 'brands-explore' %>
 
 <div class="modal fade modal-profile" id="show-readonly-user-profile" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog influencer-profile-modal" role="document">
-    <div class="modal-content view-profile-modal">
-      <div class="modal-header">
-        <button type="button" class="close view-profile-modal-close" data-dismiss="modal" aria-label="Close"><span
-        aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel"></h4>
-      </div>
-      <div class="modal-body">
-        <div class="display-inline-block influencer-modal-image">
-          <%= image_tag(user.profile_picture, :class => 'explore-influencer-picture', :alt => 'profile-picture') %>
+    <div class="modal-dialog influencer-profile-modal" role="document">
+      <div class="modal-content view-profile-modal">
+        <div class="modal-header">
+          <button type="button" class="close view-profile-modal-close" data-dismiss="modal" aria-label="Close"><span
+          aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel"></h4>
         </div>
-
-        <div class="personal-info-without-fb">
-
-          <h4 class="personal-info">PERSONAL INFORMATION</h4>
-          <br/>
-          <div class="row">
-            <div class="col-md-6">
-              <span class="profile-item"><%= 'First Name' %> </span>
-              <span class="profile-value"><%=  user.first_name %></span>
-            </div>
-            <div class="col-md-6">
-              <span class="profile-item">Last Name</span>
-              <span class="profile-value"><%= user.last_name %></span>
-            </div>
+        <div class="modal-body">
+          <div class="display-inline-block influencer-modal-image">
+            <%= image_tag(user.profile_picture, :class => 'explore-influencer-picture', :alt => 'profile-picture') %>
           </div>
 
-          <div class="row">
-            <div class="col-md-6">
-              <span class="profile-item">Company Name</span>
-              <span class="profile-value"><%= user.company_name %></span>
-            </div>
-            <div class="col-md-6">
-              <span class="profile-item"><%= user.brand? ? 'Company Email' : 'Email' %></span>
-              <span class="profile-value"><%= user.company_email %></span>
-            </div>
+          <div class="display-inline-block influencer-modal-details">
+            <h4 class="font-raleway"><%= user.full_name %></h4>
+            <p class="title font-raleway"> <%= user.industry %> </p>
+            <p class="influencer-address font-raleway"> <%= user.location %></p>
           </div>
 
-          <div class="row">
-            <div class="col-md-6">
-              <span class="profile-item">Industry</span>
-              <span class="profile-value"><%= user.industry %></span>
-
+          <div class="display-inline-block pull-right like-send-request">
+            <% if  user.influencer? %>
+            <div class="follower-box font-raleway">
+              <div class="follower-number"><%= user.max_followers %></div>
+              <p> Likes</p>
             </div>
-            <div class="col-md-6">
-              <span class="profile-item">Phone </span>
-              <span class="profile-value font-hind"><%= user.phone %></span>
-            </div>
+           <% end %>
           </div>
 
-          <div class="row">
-            <div class="col-md-6">
-                <span class="profile-item">Street Address </span>
-                <span class="profile-value"><%= user.street_address %></span>
-              <div>
-                <span class="profile-item">Zip Code </span>
-                <span class="profile-value"><%= user.zip_code %></span>
-              </div>
-            </div>
+          <div class="">
+            <p class="profile-info font-raleway">
+              <%= user.short_bio %>
+            </p>
+          </div>
+          <!-- start of pricing section -->
 
-            <div class="col-md-6">
-              <div class="row">
+          <% if user.active_facebook_accounts.present? %>
+
+              <h4 class="font-raleway"> Pricing</h4>
+
+              <div class="row pricing-section">
                 <div class="col-md-12">
-                  <span class="profile-item">Landmark </span>
-                  <span class="profile-value"><%= user.landmark %></span>
-                </div>
-                <div class="col-md-12">
-                  <span class="profile-item">City </span>
-                  <span class="profile-value"><%= user.city %> </span>
-                </div>
-                <div class="col-md-12">
-                  <span class="profile-item">Country </span>
-                  <span class="profile-value"><%= user.country_name %></span>
-                </div>
-                <div class="col-md-12">
-                  <span class="profile-item">State </span>
-                  <span class="profile-value"><%= user.state_name %></span>
-                </div>
-              </div>
-            </div>
-          </div>
+                  <div class="social-account-tabs">
+                    <ul class="nav nav-tabs social-account-nav-tabs responsive influencer-social-account-nav-tabs">
+                      <% user.active_facebook_accounts.each do |account| %>
+                          <li class="influencer-social-account-tab" data-id="<%= account.id %>">
+                            <a data-toggle="tab" href="#fb_<%= account.id %>"><i class="social-account-fa-edit fa fa-facebook"></i> <%= account.name %>
+                            </a></li>
+                      <% end %>
+                    </ul>
 
-          <h4 class="company-info">
-            <%= user.influencer? ? 'PROFESSIONAL INFORMATION' : 'COMPANY INFORMATION' %>
-          </h4>
-          <br/>
+                    <div class="tab-content responsive social-account-tab-content font-raleway">
+                      <% user.active_facebook_accounts.each do |account| %>
+                          <div id="fb_<%= account.id %>" class="tab-pane">
 
-          <div class="row">
-            <div class="col-md-3">
-              <span class="profile-item">Short Bio </span>
-            </div>
-            <div class="col-md-9">
-              <span class=""><%= user.short_bio  %> </span>
-            </div>
-          </div>
-          <br/>
-        </div>
-        <!-- start of pricing section -->
+                            <%= render 'facebook/page_insights', account: account %>
+                            <br/>
 
-        <% if user.active_facebook_accounts.present? %>
-
-            <h4 class="font-raleway"> Pricing</h4>
-
-            <div class="row pricing-section">
-              <div class="col-md-12">
-                <div class="social-account-tabs">
-                  <ul class="nav nav-tabs social-account-nav-tabs responsive influencer-social-account-nav-tabs">
-                  <% user.active_facebook_accounts.each do |account| %>
-                        <li class="influencer-social-account-tab" data-id="<%= account.id %>">
-                          <a data-toggle="tab" href="#fb_<%= account.id %>"><i class="social-account-fa-edit fa fa-facebook"></i> <%= account.name %>
-                          </a></li>
-                    <% end %>
-                  </ul>
-
-                  <div class="tab-content responsive social-account-tab-content font-raleway">
-                  <% user.active_facebook_accounts.each do |account| %>
-                        <div id="fb_<%= account.id %>" class="tab-pane">
-                          <%= render 'facebook/page_insights', account: account %>
-                          <br/>
-
-                          <div class="form-group">
-                            <div class="col-md-6 col-sm-12 col-xs-12">
-                              <%= label_tag :status_update_cost, 'Status Update' %>
-                              <%= text_field_tag '', account.status_update_cost, :disabled => true %> INR
+                            <div class="form-group">
+                              <div class="col-md-6 col-sm-12 col-xs-12">
+                                <%= label_tag :status_update_cost, 'Status Update' %>
+                                <%= text_field_tag '', account.status_update_cost, :disabled => true %> INR
+                              </div>
+                              <div class="col-md-6 col-sm-12 col-xs-12">
+                                <%= label_tag :cover_photo_cost, 'Cover Photo' %>
+                                <%= text_field_tag '', account.cover_photo_cost, :disabled => true %> INR
+                              </div>
                             </div>
-                            <div class="col-md-6 col-sm-12 col-xs-12">
-                              <%= label_tag :cover_photo_cost, 'Cover Photo' %>
-                              <%= text_field_tag '', account.cover_photo_cost, :disabled => true %> INR
+                            <div class="form-group">
+                              <div class="col-md-6 col-sm-12 col-xs-12">
+                                <%= label_tag :profile_photo_cost, 'Profile Photo' %>
+                                <%= text_field_tag '', account.profile_photo_cost, :disabled => true %> INR
+                              </div>
+                              <div class="col-md-6 col-sm-12 col-xs-12">
+                                <%= label_tag :video_post_cost, 'Video Post' %>
+                                <%= text_field_tag '', account.video_post_cost, :disabled => true %> INR
+                              </div>
                             </div>
                           </div>
-                          <div class="form-group">
-                            <div class="col-md-6 col-sm-12 col-xs-12">
-                              <%= label_tag :profile_photo_cost, 'Profile Photo' %>
-                              <%= text_field_tag '', account.profile_photo_cost, :disabled => true %> INR
-                            </div>
-                            <div class="col-md-6 col-sm-12 col-xs-12">
-                              <%= label_tag :video_post_cost, 'Video Post' %>
-                              <%= text_field_tag '', account.video_post_cost, :disabled => true %> INR
-                            </div>
-                          </div>
-                        </div>
-                    <% end %>
+                      <% end %>
+                    </div>
                   </div>
                 </div>
               </div>
+          <% end %>
+
+          <div class="social-media-info font-raleway"> Social Media Information</div>
+          <p>
+            <span class="view-profile-fb-twitter-color">Facebook:</span>
+            <a href="<%= "https://www.facebook.com/app_scoped_user_id/#{user.uid}/" %>">
+              <%= "https://www.facebook.com/app_scoped_user_id/#{user.uid}/" %>
+            </a>
+          </p>
+
+          <p class="font-raleway"><span class="view-profile-fb-twitter-color"> &nbsp;  &nbsp; Twitter:</span> N/A</p>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="view-profile-industry font-raleway"> Industry</div>
+              <p class="font-raleway"><%= user.industry %></p>
             </div>
-        <% end %>
-
-        <div class="social-media-info font-raleway"> Social Media Information</div>
-        <p>
-          <span class="view-profile-fb-twitter-color">Facebook:</span>
-          <a href="<%= "https://www.facebook.com/app_scoped_user_id/#{user.uid}/" %>">
-            <%= "https://www.facebook.com/app_scoped_user_id/#{user.uid}/" %>
-          </a>
-        </p>
-
-        <p class="font-raleway"><span class="view-profile-fb-twitter-color"> &nbsp;  &nbsp; Twitter:</span> N/A</p>
-
-        <div class="row">
-          <div class="col-md-6">
-            <div class="view-profile-industry font-raleway"> Industry</div>
-            <p class="font-raleway"><%= user.industry %></p>
-          </div>
-          <div class="col-md-6">
-            <div class="view-profile-industry font-raleway"> Location</div>
-            <p class="font-raleway"><%= user.location %></p>
+            <div class="col-md-6">
+              <div class="view-profile-industry font-raleway"> Location</div>
+              <p class="font-raleway"><%= user.location %></p>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<script>
-    $('.social-account-nav-tabs a:first').tab('show');
+  <script>
+      $('.social-account-nav-tabs a:first').tab('show');
 
-    $(function(){
-        $('.influencer-social-account-tab').click(function(){
-            var offerSendBtn = $('a.btn-send-offer-request');
-            var baseOfferUrl = offerSendBtn.data('href');
-            console.log('current profile base url is ' + baseOfferUrl);
+      $(function(){
+          $('.influencer-social-account-tab').click(function(){
+              var offerSendBtn = $('a.btn-send-offer-request');
+              var baseOfferUrl = offerSendBtn.data('href');
+              console.log('current profile base url is ' + baseOfferUrl);
 
-            var socialAccountId = $(this).data('id');
-            var newUrl = baseOfferUrl + '&social_account_id=' + socialAccountId;
-            offerSendBtn.prop("href", newUrl);
+              var socialAccountId = $(this).data('id');
+              var newUrl = baseOfferUrl + '&social_account_id=' + socialAccountId;
+              offerSendBtn.prop("href", newUrl);
 
-            console.log('Now new url is  ' + offerSendBtn.prop('href'));
-        });
-        $('#show-readonly-user-profile').modal('show');
-    });
+              console.log('Now new url is  ' + offerSendBtn.prop('href'));
+          });
 
-    fakewaffle.responsiveTabs(['xs', 'sm']);
-</script>
+          fakewaffle.responsiveTabs(['xs', 'sm']);
+          $('#show-readonly-user-profile').modal('show');
+      });
+  </script>
