solve click able bran/influencer issues for social account

--- a/app/views/profile/_read_only_profile_modal.html.erb
+++ b/app/views/profile/_read_only_profile_modal.html.erb
@@ -36,7 +36,7 @@
           </div>
           <!-- start of pricing section -->
 
-          <% if user.active_facebook_accounts.present? %>
+          <% if user.active_facebook_accounts.present? && user.influencer? %>
 
               <h4 class="font-raleway"> Pricing</h4>
 
