--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -15,7 +15,7 @@
 
           <div class="display-inline-block influencer-modal-details">
             <h4 class="font-raleway"><%= influencer.full_name %></h4>
-            <p class="title font-raleway"> <%= influencer.categories.pluck(:name).join(', ') if influencer.categories.present? %> </p>
+            <p class="title font-raleway"></p>
             <p class="influencer-address font-raleway"> <%= influencer.location %></p>
           </div>
 
@@ -99,7 +99,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="view-profile-industry font-raleway"> Industry</div>
-            <p class="font-raleway"><%= influencer.industry %></p>
+            <p class="font-raleway"><%= influencer.categories.pluck(:name).join(', ') if influencer.categories.present? %></p>
           </div>
           <div class="col-md-6">
             <div class="view-profile-industry font-raleway"> Location</div>
