--- a/app/views/profile/_read_only_profile_modal.html.erb
+++ b/app/views/profile/_read_only_profile_modal.html.erb
@@ -16,7 +16,7 @@
 
           <div class="display-inline-block influencer-modal-details">
             <h4 class="font-raleway"><%= user.full_name %></h4>
-            <p class="title font-raleway"> <%= user.categories.pluck(:name).join(', ') if user.categories.present? %> </p>
+            <p class="title font-raleway"></p>
             <p class="influencer-address font-raleway"> <%= user.location %></p>
           </div>
 
@@ -99,7 +99,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="view-profile-industry font-raleway"> Industry</div>
-              <p class="font-raleway"><%= user.industry %></p>
+              <p class="font-raleway"><%= user.categories.pluck(:name).join(', ') if user.categories.present? %></p>
             </div>
             <div class="col-md-6">
               <div class="view-profile-industry font-raleway"> Location</div>
