--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -40,14 +40,13 @@
 @media screen and (min-width: 768px) {
   .header {
     position: fixed;
-    top: 0;
+    top: 50px;
     right: 0;
     left: 0;
     z-index: 99;
     background-color: white;
   }
   .welcome_bar{
-    top: -62px;
     z-index: 100;
   }
 
@@ -173,7 +172,7 @@ ul.menu-item li {
   background: image-url("Pic1.png") no-repeat scroll center center / cover ;
   height: 620px;
   padding-top: 70px;
-  margin-top: 62px;
+  margin-top: 12px;
 }
 
 .identity .text-upper {
@@ -721,9 +720,9 @@ ul.menu-item li {
 .welcome_bar {
   background: rgba(0, 201, 243, 1) none repeat scroll 0 0;
   color: #fff;
-  float: left;
   font-size: 12px;
   font-weight: 600;
+  overflow: hidden;
   padding: 14px 0;
   position: relative;
   width: 100%;
