--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -9,7 +9,7 @@
     <%= image_tag(@influencer.profile_picture, :class => 'campaign-influencer-picture', :alt => 'profile-picture') %>
     <div class="influencer-description">
       <h4><%= @influencer.full_name.present? ? @influencer.full_name : 'USER' %></h4>
-      <p class="influencer-title"> <%= @influencer.industry.present? ? @influencer.industry : 'Entrepreneur' %> </p>
+      <p class="influencer-title"><%= @influencer.categories.pluck(:name).join(', ') if @influencer.categories.present? %> </p>
       <p class="influencer-address"> <%= @influencer.street_address.present? ? @influencer.street_address : 'User Address'  %> </p>
     </div>
   </div>
