--- a/app/views/facebook/insights.html.erb
+++ b/app/views/facebook/insights.html.erb
@@ -18,10 +18,23 @@
   </div>
 
   <p class="text-right">
-    Last updated: <%= @account.insights_updated_at.try(:strftime,'%B %d, %Y %l:%M %P') %>
+    Last updated: <span data-datetime="<%= @account.insights_updated_at.try(:strftime,'%B %d, %Y %l:%M %P') %>"><%= @account.insights_updated_at.try(:strftime,'%B %d, %Y %l:%M %P') %></span>
     <a class="load-page" href="javascript:" onclick="window.location='?id=<%= @account.id %>&refresh=1'">
       <%= image_tag asset_path('Refresh_icon.png') %>
     </a>
+
+    <script>
+      $('[data-datetime]').each(function() {
+        var dt = new Date($(this).data('datetime'));
+        var offset = dt.getTimezoneOffset();
+        dt.setMinutes(dt.getMinutes() - offset);
+
+        $(this).text(dt.toLocaleDateString('en-US', {
+          year: 'numeric', month: 'long',
+          day: 'numeric', hour: 'numeric', minute: '2-digit'
+        }));
+      });
+    </script>
   </p>
 
   <div class="br-container">
