base align items in top blue nav bar

--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -565,7 +565,7 @@ ul.menu-item li {
   color: #fff;
 }
 .fb-twitter .fa{
-  line-height: 18px;
+  line-height: 16px;
 
   &.fa-google-plus{
     font-size: 1.2em;
@@ -733,7 +733,7 @@ ul.menu-item li {
 }
 .welcome_bar .left {
   float: left;
-  padding-top: 5px;
+  padding-bottom: 5px;
 }
 .welcome_bar .right {
   float: right;
