Show user details on clicking campaign image icon for brand page

--- a/app/views/campaigns/brand_campaign.html.erb
+++ b/app/views/campaigns/brand_campaign.html.erb
@@ -73,7 +73,12 @@
 
             <tbody>
             <tr>
-              <td><%= image_tag(@campaign.receiver.profile_picture, :class => 'pepsi-img-responsive') %> &nbsp; <%= @campaign.name %></td>
+              <td>
+                <a href="<%= show_user_profile_path(@campaign.receiver.id) %>" data-remote="true" >
+                  <%= image_tag(@campaign.receiver.profile_picture, :class => 'pepsi-img-responsive') %>
+                </a>
+                &nbsp; <%= @campaign.name %>
+              </td>
               <td><%= @campaign.number_of_likes %></td>
               <td><%= @campaign.number_of_post_reach %></td>
             </tr>
@@ -96,7 +101,12 @@
 
             <tbody>
             <tr>
-              <td><%= image_tag(@campaign.receiver.profile_picture, :class => 'pepsi-img-responsive') %> &nbsp; <%= @campaign.name %></td>
+              <td>
+                <a href="<%= show_user_profile_path(@campaign.receiver.id) %>" data-remote="true" >
+                  <%= image_tag(@campaign.receiver.profile_picture, :class => 'pepsi-img-responsive') %>
+                </a>
+                &nbsp; <%= @campaign.name %>
+              </td>
               <td><%= @campaign.number_of_likes %></td>
               <td><%= @campaign.number_of_comments %></td>
               <td><%= @campaign.number_of_shares %></td>
