give underline style on offer name hover effect

--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -241,6 +241,10 @@
     width: calc(100% - 550px);
 }
 
+.offer-text:hover{
+    text-decoration: underline;
+}
+
 .offer-time {
     float: right;
     margin-right: 20px;
