all blue button(sign-up, offer accept, reply button ) bg-color and hover effect color

--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -11,10 +11,15 @@
 }
 
 .btn-accept {
-    background-color: #00aeed;
+    background-color: #00c9f3;
     color: white;
     font-size: 13px;
     padding: 3px 7px;
+}
+
+.btn-accept:hover{
+    color: white;
+    background-color: #00b6e2;
 }
 
 @media (max-width: 980px) {
