--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -73,7 +73,7 @@
 }
 
 .nav li:last-child > a:hover, .nav li:last-child > a:focus {
-  background-color: #127bb2;
+  background-color: #00b6e2;
   color: #00aeef;
 }
 
