--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title><%= yield(:title) %></title>
+  <%= favicon_link_tag 'favicon.ico' %>
   <%= stylesheet_link_tag 'application.css', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
