--- a/app/views/offers/load_offer.js.erb
+++ b/app/views/offers/load_offer.js.erb
@@ -1,1 +1,4 @@
+$('#offer-' + '<%= params[:id] %>').remove();
+<% if @offer %>
 $('#inbox').prepend("<%= j (render partial: 'offer',locals: { offer: @offer, star_page: true } ) %>");
+<% end %>
