--- a/app/views/profile/select_accounts.html.erb
+++ b/app/views/profile/select_accounts.html.erb
@@ -7,7 +7,7 @@
 <div class="brands-profile-page-wrapper">
 
   <p class="alert alert-danger">
-    Please select at least once social account before continuing to use the site
+    Please select at least one social account before continuing to use the site
   </p>
 
   <button type="button" class="btn btn-account button-border-yellow js-add-account" href="javascript:">MANAGE ACCOUNT</button>
