--- a/app/views/influencers/search.html.erb
+++ b/app/views/influencers/search.html.erb
@@ -1,5 +1,9 @@
+<%= stylesheet_link_tag 'offers.css', media: 'all' %>
+
 <div class="influencer-search-result-box">
   <% @messages.each do |message|%>
-      <p><%= link_to message.body.truncate_words(6), "#{offers_path(offer_id: message.campaign_id, search_key: params[:search_key])}#offer-#{message.campaign_id}" %></p>
+      <%= link_to "#{offers_path(offer_id: message.campaign_id, search_key: params[:search_key])}#offer-#{message.campaign_id}", class: 'display-block' do %>
+      <%= render partial: 'search_item', locals: {offer: message.campaign, message: message} %>
+      <% end %>
   <% end %>
 </div>
